--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,51 +1,22 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      h1 {text-align: center;}
-    </style>
-    <title>Register</title>
-  </head>
-
-  <body>
-    <div class="form">
-      <h1 class="heading">Register</h1>
-      <input
-        type="email"
-        placeholder="email"
-        autocomplete="off"
-        class="email"
-        required
-      />
-      <input
-        type="password"
-        placeholder="password"
-        autocomplete="off"
-        class="password"
-        required
-      />
-      <input
-        type="text"
-        placeholder="name"
-        autocomplete="off"
-        class="name"
-        required
-      />
-      <a href="login.html" class="link">I already have an account</a>
-
-      <br />
-
-      <!-- Takes you back to login page after registering your account (needs that functionality too) -->
-      <a href="login.html">
-        <button id="create-account-btn">Create account</button>
-      </a>
+{{> header}}
+<div class="container">
+  <h1>Register</h1>
+  <form class="signup-form">
+    <div class="form-group">
+      <label for="username-signup">Username:</label>
+      <input type="text" class="form-control" id="username-signup" name="username-signup" required>
     </div>
+    <div class="form-group">
+      <label for="email-signup">Email:</label>
+      <input type="email" class="form-control" id="email-signup" name="email-signup" required>
+    </div>
+    <div class="form-group">
+      <label for="password-signup">Password:</label>
+      <input type="password" class="form-control" id="password-signup" name="password-signup" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Register</button>
+  </form>
+</div>
 
-    <script>
-      document.getElementById("create-account-btn").addEventListener("click",
-      registerAccount); function registerAccount() { }
-    </script>
 
-  </body>
-</html>
+<script src="/js/login.js"></script>
