--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body>
-  {{> header}}
   <div class="container my-5">
     {{#if logged_in}}
       {{#unless isAdmin}}
@@ -93,6 +92,6 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="/js/custom.js"></script>
-  <script src="/js/background.js"></script>
+  {{!-- <script src="/js/background.js"></script> --}}
 </body>
 </html>
