svg is now savable to by the user as png and svg

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -90,6 +90,9 @@
     {{/if}}
   </div>
 
+<div id="svgContainer" class="my-4"></div>
+<button id="saveLabelButton" class="btn btn-primary" style="display:none;">Save Label</button>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="/js/custom.js"></script>
   {{!-- <script src="/js/background.js"></script> --}}
