--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,61 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EcoLabels</title>
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/custom.css">
-</head>
-<body>
-  <div class="container my-5">
-    {{#if logged_in}}
-      {{#unless isAdmin}}
-        <h1>EcoLabels Dashboard</h1>
-        <p>Welcome to the EcoLabels app. Manage and create educational plaques for animals and insects.</p>
-      {{/unless}}
-    {{/if}}
+{{> header}}
+<div class="container my-5">
+  {{#if logged_in}}
+    {{#unless isAdmin}}
+      <h1>EcoLabels Dashboard</h1>
+      <p>Welcome to the EcoLabels app. Manage and create educational plaques for animals and insects.</p>
+    {{/unless}}
+  {{/if}}
 
-    {{#if logged_in}}
-      {{#if isAdmin}}
-        <div class="card my-4">
-          <div class="card-body">
-            <h2>Admin Actions</h2>
-            <a href="/admin-add-animal" class="btn btn-success btn-lg">Add New Animal</a>
-          </div>
+  {{#if logged_in}}
+    {{#if isAdmin}}
+      <div class="card my-4">
+        <div class="card-body">
+          <h2>Admin Actions</h2>
+          <a href="/admin-add-animal" class="btn btn-success btn-lg">Add New Animal</a>
         </div>
-      {{else}}
-        <div class="card my-4">
-          <div class="card-body">
-            <h2>Generate a Label</h2>
-            <form id="labelForm">
-              <div class="form-group">
-                <label for="petName">Pet Name:</label>
-                <input type="text" class="form-control" id="petName" name="petName" required>
-              </div>
-              <div class="form-group">
-                <label for="petSpecies">Pet Species:</label>
-                <select class="form-control" id="petSpecies" name="petSpecies" required>
-                  <option value="" disabled selected>Select Species</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="petDate">Pet Date:</label>
-                <input type="date" class="form-control" id="petDate" name="petDate" required>
-              </div>
-              <div class="form-group">
-                <label for="petGender">Pet Gender:</label>
-                <select class="form-control" id="petGender" name="petGender" required>
-                  <option value="Male">Male</option>
-                  <option value="Female">Female</option>
-                </select>
-              </div>
-              <button type="submit" class="btn btn-primary">Generate Label</button>
-            </form>
-            <div id="svgContainer" class="my-4"></div>
-          </div>
-        </div>
-      {{/if}}
+      </div>
     {{else}}
       <div class="card my-4">
         <div class="card-body">
@@ -84,17 +43,42 @@
             </div>
             <button type="submit" class="btn btn-primary">Generate Label</button>
           </form>
+          <button type="button" id="saveLabelButton" class="btn btn-primary" style="display: none;">Save Label</button>
           <div id="svgContainer" class="my-4"></div>
         </div>
       </div>
     {{/if}}
-  </div>
-
-<div id="svgContainer" class="my-4"></div>
-<button id="saveLabelButton" class="btn btn-primary" style="display:none;">Save Label</button>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="/js/custom.js"></script>
-  {{!-- <script src="/js/background.js"></script> --}}
-</body>
-</html>
+  {{else}}
+    <div class="card my-4">
+      <div class="card-body">
+        <h2>Generate a Label</h2>
+        <form id="labelForm">
+          <div class="form-group">
+            <label for="petName">Pet Name:</label>
+            <input type="text" class="form-control" id="petName" name="petName" required>
+          </div>
+          <div class="form-group">
+            <label for="petSpecies">Pet Species:</label>
+            <select class="form-control" id="petSpecies" name="petSpecies" required>
+              <option value="" disabled selected>Select Species</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="petDate">Pet Date:</label>
+            <input type="date" class="form-control" id="petDate" name="petDate" required>
+          </div>
+          <div class="form-group">
+            <label for="petGender">Pet Gender:</label>
+            <select class="form-control" id="petGender" name="petGender" required>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+            </select>
+          </div>
+          <button type="submit" class="btn btn-primary">Generate Label</button>
+        </form>
+        <button type="button" id="saveLabelButton" class="btn btn-primary" style="display: none;">Save Label</button>
+        <div id="svgContainer" class="my-4"></div>
+      </div>
+    </div>
+  {{/if}}
+</div>
