--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
   {{{body}}}
   {{> footer}}
 
-  <!-- Modal Structure -->
+  <!-- Message Modal Structure -->
   <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -51,6 +51,9 @@
       </div>
     </div>
   </div>
+
+  <!-- Save Label Button -->
+  <button id="saveLabelButton" class="btn btn-primary" style="position: fixed; right: 20px; bottom: 20px;">Save Label</button>
 
   <script src="/js/jquery.min.js"></script>
   <script src="/js/bootstrap.bundle.min.js"></script>
