updated handlebar for header

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body class="d-flex flex-column min-vh-100" data-logged-in="{{#if logged_in}}true{{else}}false{{/if}}">
+  {{> header}}
   {{{body}}}
   {{> footer}}
 
