--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -42,7 +42,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Generate Label</button>
           </form>
-          <button type="button" id="saveLabelButton" class="btn btn-primary" style="display: none;">Save Label</button>
+          <button type="button" id="downloadLabelButton" class="btn btn-primary mt-3" style="display: none;">Download Label</button>
           <div id="svgContainer" class="my-4"></div>
         </div>
       </div>
@@ -75,7 +75,7 @@
           </div>
           <button type="submit" class="btn btn-primary">Generate Label</button>
         </form>
-        <button type="button" id="saveLabelButton" class="btn btn-primary" style="display: none;">Save Label</button>
+        <button type="button" id="downloadLabelButton" class="btn btn-primary mt-3" style="display: none;">Download Label</button>
         <div id="svgContainer" class="my-4"></div>
       </div>
     </div>
