--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body class="d-flex flex-column min-vh-100" data-logged-in="{{#if logged_in}}true{{else}}false{{/if}}">
-  {{> header}}
+  {{> header}}  <!-- Ensure this is included only once -->
   {{{body}}}
   {{> footer}}
 
-  <!-- Message Modal Structure -->
+  <!-- Modal Structure -->
   <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -52,9 +52,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Save Label Button -->
-  <button id="saveLabelButton" class="btn btn-primary" style="position: fixed; right: 20px; bottom: 20px;">Save Label</button>
 
   <script src="/js/jquery.min.js"></script>
   <script src="/js/bootstrap.bundle.min.js"></script>
